--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: 读立写生
+title: Alan's Blog
 header-img: "img/Xacebook.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "Viva la vida"  
 baseurl: ""
-url: "http://www.cnfeat.com"  
+url: ""  
 
 # About/contact
 owner: 
-  name: " CNFeat"
-  email: CnFeat@gmail.com
-  bio: "每天写1000字改变自己"
+  name: " Alan"
+  email: 2015214115@stu.cqupt.edu.cn
+  bio: "Viva la vida"
 
 # Data
 gavatar: http://openmindclub.qiniudn.com/omt/GavatarCNFeat.png
@@ -42,16 +42,16 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "CNFeat"
+      author: "Alan"
       header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
   provider : disqus
   duoshuo :
-    short_name : cnfeat
+    short_name : alan
   disqus :
-      short_name : cnfeat
+      short_name : alan
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-80884545-1
