--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Alan's Blog
-header-img: "img/Xacebook.jpg"
+header-img: "img/black.jpg"
 tagline: "cn"  
 description: "Viva la vida"  
 baseurl: ""
